--- a/wp-content/themes/tema/style.css
+++ b/wp-content/themes/tema/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: Nome do Seu Tema
 Theme URI: http://seudominio.com
-Author: Seu Nome
-Author URI: http://seudominio.com/sobre
-Description: Descrição do seu tema WordPress.
+Author: Guilherme Henrique Borges Silva
+Author URI: https://github.com/guihrq
+Description: Tema desenvolvido para o site Nome do Site
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
