--- a/wp-content/themes/tema/assets/sass/footer.scss
+++ b/wp-content/themes/tema/assets/sass/footer.scss
@@ -1,21 +1,48 @@
 /* Footer */
-
 footer {
   background-color: #6c757d;
   color: #f8f9fa;
   padding-top: 1rem;
-}
 
-footer a {
-  color: #343a40;
-}
-
-footer a:hover {
-  color: #007bff;
-}
-
-.site-footer {
-  address {
+  a {
     color: #343a40;
+
+    &:hover {
+      color: #007bff;
+    }
+  }
+  #button {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border-radius: 4px;
+    position: fixed;
+    bottom: 60px;
+    right: 15px;
+    transition: background-color .3s, 
+      opacity .5s, visibility .5s;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
+  }
+  #button:hover {
+    cursor: pointer;
+    background-color: $color-background;
+    border: 3px solid $color-dark;
+  }
+  #button:active {
+    background-color: $color-secondary;
+  }
+  #button.show {
+    opacity: 1;
+    visibility: visible;
+  }
+  .site-footer {
+    address {
+      color: $color-dark;
+    }
+  }
+  .img-topo {
+    width: 40px;
   }
 }
