--- a/wp-content/themes/tema/assets/sass/home.scss
+++ b/wp-content/themes/tema/assets/sass/home.scss
@@ -1,5 +1,4 @@
 /* Home */
-
 #video {
   position: relative;
   width: 100%;
@@ -15,7 +14,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: .5;
+  opacity: 0.5;
   pointer-events: none;
 }
 
@@ -24,4 +23,18 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+#depoimentos {
+  .carousel-depoimentos {
+    .carousel-cell {
+      .card {
+        .card-body {
+          img {
+            border-radius: 50%;
+          }
+        }
+      }
+    }
+  }
 }
