--- a/wp-content/themes/tema/assets/css/main.css
+++ b/wp-content/themes/tema/assets/css/main.css
@@ -289,30 +289,6 @@ table {
   table tbody + tbody {
     border-top: 2px solid #6c757d; }
 
-/* Home */
-#video {
-  position: relative;
-  width: 100%;
-  padding-top: 85vh;
-  overflow: hidden;
-  background: -webkit-linear-gradient(top left, #0078a3 0%, #fd7e14 100%);
-  background: linear-gradient(to bottom right, #0078a3 0%, #fd7e14 100%); }
-
-.video-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0.5;
-  pointer-events: none; }
-
-#banners {
-  position: relative;
-  width: 100%;
-  overflow: hidden; }
-
 .content {
   position: absolute;
   top: 50%;
@@ -320,6 +296,29 @@ table {
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%); }
+
+/* Home */
+#video {
+  position: relative;
+  width: 100%;
+  padding-top: 85vh;
+  overflow: hidden;
+  background: -webkit-linear-gradient(top left, #343a40 0%, #6c757d 100%);
+  background: linear-gradient(to bottom right, #343a40 0%, #6c757d 100%); }
+  #video .video-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+    pointer-events: none; }
+
+#banners {
+  position: relative;
+  width: 100%;
+  overflow: hidden; }
 
 /* Formulários */
 input,
@@ -385,6 +384,178 @@ footer {
     color: #343a40; }
   footer .img-topo {
     width: 40px; }
+
+.lgpd {
+  position: fixed;
+  bottom: 0px;
+  width: calc(100% - 2rem);
+  z-index: 1000;
+  margin: 1rem;
+  -webkit-animation: lgpd .5s forwards;
+          animation: lgpd .5s forwards;
+  pointer-events: none; }
+  .lgpd .lgpd-container {
+    display: grid;
+    grid-template-columns: 1fr minmax(auto, 18rem);
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    max-width: 540px;
+    margin: 0 auto;
+    font-size: .875rem;
+    font-family: "Rubik", sans-serif;
+    font-weight: normal;
+    line-height: 1.2;
+    position: relative;
+    z-index: 110;
+    pointer-events: none; }
+    .lgpd .lgpd-container .lgpd-preferences {
+      background: white;
+      padding: 1.5rem 1rem 2rem 1rem;
+      z-index: 100;
+      border-radius: 5px 5px 0 0;
+      opacity: 0;
+      -webkit-transform: translateY(15px);
+          -ms-transform: translateY(15px);
+              transform: translateY(15px);
+      visibility: hidden;
+      grid-column: 2; }
+      .lgpd .lgpd-container .lgpd-preferences.open {
+        -webkit-transform: translateY(5px);
+            -ms-transform: translateY(5px);
+                transform: translateY(5px);
+        opacity: 1;
+        visibility: visible;
+        -webkit-transition: .3s;
+        transition: .3s;
+        pointer-events: auto; }
+      .lgpd .lgpd-container .lgpd-preferences .lgpd-preferences-header {
+        margin-bottom: 1rem; }
+        .lgpd .lgpd-container .lgpd-preferences .lgpd-preferences-header .lgpd-link {
+          color: black;
+          text-decoration: underline; }
+      .lgpd .lgpd-container .lgpd-preferences .lgpd-switch {
+        display: grid;
+        gap: 1rem;
+        margin-top: 1.5rem; }
+        .lgpd .lgpd-container .lgpd-preferences .lgpd-switch .lgpd-switch-item {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+              -ms-flex-align: center;
+                  align-items: center;
+          line-height: 1; }
+          .lgpd .lgpd-container .lgpd-preferences .lgpd-switch .lgpd-switch-item .lgpd-switch-toggle {
+            display: inline-block;
+            background: #ccc;
+            width: 36px;
+            border-radius: 26px;
+            padding: 2px;
+            margin-right: .5rem;
+            border: none;
+            cursor: pointer;
+            position: relative;
+            top: -1px; }
+            .lgpd .lgpd-container .lgpd-preferences .lgpd-switch .lgpd-switch-item .lgpd-switch-toggle::after {
+              content: '';
+              display: block;
+              width: 18px;
+              height: 18px;
+              border-radius: 50%;
+              background: white;
+              box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.1);
+              -webkit-transition: 0.1s;
+              transition: 0.1s; }
+          .lgpd .lgpd-container .lgpd-preferences .lgpd-switch .lgpd-switch-item .lgpd-switch-toggle[disabled] {
+            opacity: .3;
+            cursor: initial; }
+          .lgpd .lgpd-container .lgpd-preferences .lgpd-switch .lgpd-switch-item .lgpd-switch-toggle[disabled][aria-checked="true"] {
+            background: #343a40; }
+          .lgpd .lgpd-container .lgpd-preferences .lgpd-switch .lgpd-switch-item .lgpd-switch-toggle[aria-checked="true"] {
+            background: #343a40; }
+            .lgpd .lgpd-container .lgpd-preferences .lgpd-switch .lgpd-switch-item .lgpd-switch-toggle[aria-checked="true"]::after {
+              -webkit-transform: translateX(14px);
+                  -ms-transform: translateX(14px);
+                      transform: translateX(14px); }
+          .lgpd .lgpd-container .lgpd-preferences .lgpd-switch .lgpd-switch-item .lgpd-switch-toggle[disabled] {
+            opacity: .3;
+            cursor: initial; }
+          .lgpd .lgpd-container .lgpd-preferences .lgpd-switch .lgpd-switch-item .lgpd-switch-toggle[disabled] + span {
+            cursor: initial; }
+          .lgpd .lgpd-container .lgpd-preferences .lgpd-switch .lgpd-switch-item .lgpd-switch-toggle + span {
+            cursor: pointer; }
+    .lgpd .lgpd-container .lgpd-info {
+      display: grid;
+      grid-template-columns: 1fr minmax(auto, 16rem);
+      grid-column: 1 / 3;
+      background: white;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      gap: 1rem;
+      box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.2);
+      background: white;
+      border-radius: 5px;
+      padding: 1rem;
+      pointer-events: auto;
+      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; }
+      .lgpd .lgpd-container .lgpd-info .lgpd-buttons {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        gap: 1rem; }
+        .lgpd .lgpd-container .lgpd-info .lgpd-buttons .lgpd-personalizar {
+          background: #eee;
+          color: #343a40;
+          box-shadow: none; }
+        .lgpd .lgpd-container .lgpd-info .lgpd-buttons .lgpd-personalizar {
+          background-image: -webkit-linear-gradient(#eee, #eee);
+          background-image: linear-gradient(#eee, #eee);
+          box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+          border-radius: 4px;
+          color: #343a40;
+          font-size: .875rem;
+          font-family: "Rubik", sans-serif;
+          font-weight: normal;
+          line-height: 1.2;
+          display: block;
+          box-sizing: border-box;
+          padding: 0.9375rem;
+          -webkit-transition: .3s;
+          transition: .3s;
+          border: none;
+          -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.2, 1.4);
+                  transition-timing-function: cubic-bezier(0.2, 1, 0.2, 1.4);
+          cursor: pointer;
+          border: 1px solid transparent; }
+        .lgpd .lgpd-container .lgpd-info .lgpd-buttons .lgpd-save {
+          background-image: -webkit-linear-gradient(#f8f9fa, #f8f9fa);
+          background-image: linear-gradient(#f8f9fa, #f8f9fa);
+          box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+          border-radius: 4px;
+          color: #343a40;
+          font-size: .875rem;
+          font-family: "Rubik", sans-serif;
+          font-weight: normal;
+          line-height: 1.2;
+          display: block;
+          box-sizing: border-box;
+          padding: 0.9375rem;
+          -webkit-transition: .3s;
+          transition: .3s;
+          border: none;
+          -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.2, 1.4);
+                  transition-timing-function: cubic-bezier(0.2, 1, 0.2, 1.4);
+          cursor: pointer;
+          border: 1px solid transparent; }
 
 /* Estilização para Desktop */
 @media (min-width: 992px) {
