Páginas de Políticas Cookies e Privacidade

--- a/wp-content/themes/tema/assets/sass/footer.scss
+++ b/wp-content/themes/tema/assets/sass/footer.scss
@@ -87,6 +87,7 @@ footer {
         visibility: visible;
         transition: .3s;
         pointer-events: auto;
+        min-width: 305px;
       }
       .lgpd-preferences-header {
         margin-bottom: 1rem;
