--- a/wp-content/themes/tema/assets/sass/footer.scss
+++ b/wp-content/themes/tema/assets/sass/footer.scss
@@ -1,14 +1,14 @@
 /* Footer */
 footer {
-  background-color: #6c757d;
-  color: #f8f9fa;
+  background-color: $color-secondary;
+  color: $color-light;
   padding-top: 1rem;
 
   a {
-    color: #343a40;
+    color: $color-dark;
 
     &:hover {
-      color: #007bff;
+      color: $color-primary;
     }
   }
   #button {
@@ -37,13 +37,24 @@ footer {
     opacity: 1;
     visibility: visible;
   }
-  .site-footer {
-    address {
-      color: $color-dark;
+  ul {
+    margin-left: 0;
+    padding-left: 0;
+    .children {
+      padding-left: 2rem;
     }
+  }
+  address {
+    color: $color-dark;
   }
   .img-topo {
     width: 40px;
+  }
+  .socialmedia_footer {
+    width: 45px; /* Define a largura das imagens como 50px */
+    height: auto; /* Mantém a proporção original da altura */
+    display: inline-block; /* Alinha as imagens horizontalmente */
+    margin-right: 10px; /* Adiciona um espaço entre as imagens, se necessário */
   }
 }
 
