Revert "Primeiro Commit"
This reverts commit 725bed01365ddd320c724d66b346aea88b46ba61.

--- a/wp-content/themes/tema/style.css
+++ b/wp-content/themes/tema/style.css
@@ -1,13 +1,13 @@
 /*
-Theme Name: Tudo de Texto
-Theme URI: http://tudodetexto.com.br
+Theme Name: Nome do Seu Tema
+Theme URI: http://seudominio.com
 Author: Guilherme Henrique Borges Silva
-Author URI: https://github.com/guihrq/tudodetexto/
-Description: Tema desenvolvido para o site Tudo de Texto
+Author URI: https://github.com/guihrq
+Description: Tema desenvolvido para o site Nome do Site
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: tudodetexto
+Text Domain: nomedoseutema
 Tags: custom-background, custom-header, custom-menu, featured-images, full-width-template, theme-options, threaded-comments, translation-ready
 */
 
